glx/testdata/invalid/comprehensive-broken-references/citations/citation-birth.glx
citations:
  citation-birth:
    source: source-nonexistent
    repository: repository-nonexistent
    locator: "Page 1"

